--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# IDE
+.idea/
+
+# Claude Code local settings
+.claude/settings.local.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
